@@ -328,7 +328,21 @@ sub serv_kill {
 sub serv_jupe {
 	my ($server, $reason) = @_;
 	send_sock(":".svsUID('os')." SQUIT ".$server." :".$reason);
+	foreach my $key (keys %Chakora::sid) {
+		if ($Chakora::sid{$key}{'name'} eq $server) {
+			$ssid = $key;
+		}
+	}
 	send_sock(":".svsUID('chakora::server')." SERVER ".$server." 2 :(JUPED) ".$reason);
+	$Chakora::sid{$sid}{'sid'} = 2;
+	$Chakora::sid{$sid}{'name'} = $server;
+	$Chakora::sid{$sid}{'hub'} = config('me', 'sid');	
+	$Chakora::sid{$sid}{'info'} = "(JUPED) ".$reason;
+	foreach my $key (keys %Chakora::uid) {
+		if ($Chakora::uid{$key}{'server'} eq $ssid) {
+			delete $Chakora::uid{$key};
+		}
+	}
 }
 
 # Handle SQUIT
